@@ -34,6 +34,7 @@ NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at o
   - capture - offline pcap allows more outstanding packets based on maxPacketsInQueue
   - db.pl - Fixed some OpenSearch compatibility
   - db.pl - Fixed upgrading to 4.x with no _moloch_shared user
+  - viewer - Fix cert notbefore/notafter showing bad dates in sessions table
 
 4.0.0 2022/10/11
   - BREAKING - Must be 3.3.0+ to upgrade to 4.x
